# rapidpro

./: .bowerrc  .codecov.yml  .coverage_failcheck  .coveragerc  .coveragerc_failcheck  .coveragerc_missing  .coveragerc_todo  .deploy.yaml  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .prettierrc  .pylintrc  .travis.yml  CCLA  CCLA.md  CCLA.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.bak  Dockerrun.aws.json.default  LICENSE  README.md  Vagrantfile  WENI-CHANGELOG.md  _config.yml  about.md  ansible.cfg  bower.json  clear-compressor-cache.py  code_check.py  conftest.py  contact.md  contribute.md  dc-rapidpro.dev.sh  do-freeze-python-deps.bash  (+35 more)
.circleci/: config.yml
.ebextensions/: change-nginx-max-body-size.config  update-ulimit.config
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  new-features.md
.github/workflows/: build-develop-india-rapidpro.yaml  build-develop-ireland-rapidpro.yaml  build-develop-sp-rapidpro.yaml  build-production-india-rapidpro.yaml  build-production-ireland-rapidpro.yaml  build-production-sp-rapidpro.yaml  build-push-develop.yaml  build-push-dnx.yaml  build-push-production.yaml  build-push-staging.yaml  build-rapidpro-push-tag-sp  build-rapidpro-push-tag-sp.yaml  build-staging-india-rapidpro.yaml  build-staging-ireland-rapidpro.yaml  build-staging-sp-rapidpro.yaml  ci.yml  cla.yml  manual.yml  stale.yml
_data/: docs.yml
_docs/: archiver.md  campaigns.md  channels.md  coding-conventions.md  components.md  contacts.md  courier.md  development.md  flows.md  hosting.md  index.md  indexer.md  ivr.md  locations.md  mailroom.md  msgs.md  orgs.md  schedules.md  technologies.md  triggers.md  values.md
_includes/: docs_contents.html  docs_ul.html  header.html  top.html
_layouts/: default.html  docs.html
ansible/: requirements.yml  site.yml  vars.yml
antlr/: ContactQL.g4  ContactSearch.g4
components/: CreateIncludesPlugin.js  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
components/public/: index.html
components/src/: FormElement.ts  RapidElement.ts  alias-editor.js  interfaces.ts  rp-components.js
courier/: Dockerfile
docker/: Dockerfile  Dockerfile.app  Dockerfile.celery  Dockerfile.varnish  clear-compressor-cache.py  docker-compose.dev.yml  docker-compose.yml  docker.settings  entrypoint.sh  gunicorn.conf.py  makefile  nginx-client-max-body-size.conf  nginx.conf  nginx.site.conf  pip-freeze.txt  pip-requires.txt  start  supervisor-app.conf  supervisor-celery.conf  varnish.vcl
docker/gunicorn/: gunicorn-logging.conf  gunicorn.conf.py
docker_postgres/: Dockerfile  initdb-postgis.sh
fonts/rapidpro/: style.css
images/: hosting.xml
karma/: helpers.coffee  test_completions.coffee  test_temba.coffee
karma/flows/: helpers.coffee  services.coffee  test_controllers.coffee  test_directives.coffee  test_services.coffee
media/test_flows/: action_packed.json  add_label.json  airtime.json  all_dependency_types.json  background.json  bad_send_action.json  call_channel_split.json  campaign_import_with_translations.json  capture-recording.json  cataclysm.json  cataclysm_without_groups.json  channel_split.json  channel_split_rule_first.json  check_result_text.json  child.json  color.json  color_gender_age.json  color_v11.json  color_v13.json  contact_surveyor.json  dependencies.json  dependencies_v13.json  dependencies_voice.json  dual_webhook.json  empty_payload.json  favorites.json  favorites_bad_group_name_v10.json  favorites_bad_group_name_v4.json  favorites_bad_group_name_v5.json  favorites_bad_group_name_v6.json  favorites_bad_group_name_v7.json  favorites_bad_group_name_v8.json  favorites_bad_group_name_v9.json  favorites_timeout.json  favorites_v13.json  favorites_v4.json  flow_loop.json  flow_quick_replies.json  flow_starts.json  gather-digits.json  (+108 more)
media/test_imports/: abc_@@é.xls  call-me-maybe.json  capture-recording.json  data_formats.xlsx  duplicate_header.xlsx  duplicate_urn.xlsx  duplicate_uuid.xlsx  empty.csv  empty.xlsx  empty_all_rows.xlsx  empty_header.xlsx  encoding_iso-8859-1.csv  encoding_iso-8859-5.csv  encoding_utf16-be.csv  encoding_utf16-le.csv  explicit_clearing.xlsx  extra_fields_and_group.xlsx  farmers.csv  flow-starts.json  formula_data.xlsx  gather-digits.json  header_chars.xlsx  invalid_field_key.xlsx  invalid_scheme.xlsx  invalid_urn.xlsx  missing_name_header.xlsx  multi-language-flow.json  multiple_tel_urns.xlsx  no_urn_or_uuid.xlsx  numerical_header.xlsx  reserved_field_key.xlsx  rule-first-ivr.json  ruleset_loop.json  sample_contacts.xls  sample_contacts.xlsx  sample_contacts_UPPER.XLS  sample_contacts_bad_unicode.xls  sample_contacts_inc_test.xls  sample_contacts_missing_name_header.xls  sample_contacts_missing_name_phone_headers.xls  (+40 more)
media/test_media/: snow.m4a
selenium/: Flows  Login  Logout  TestFlow
sideloader/: deploy.sh  postinstall.sh
sitestatic/: flow-editor.js  flow-editor.min.css  flow-editor.min.js
sitestatic/CACHE/: manifest.json
static/js/: uri.js  (+33 more)
stylesheets/: rapidpro.css  stylesheet.css
temba/: __init__.py  bundles.py  celery_autoscaler.py  context_processors.py  context_processors_weni.py  es.py  formax.py  middleware.py  mixins.py  nexmo.py  perf_tests.py  reduce.js  security_settings.py  settings.py  settings.py.dev  settings.py.perf  settings.py.prod  settings_ci.py  settings_common.py  settings_common.py.orig  settings_compress.py  settings_security.py  settings_travis.py  temba_celery.py  temba_email.py  temba_nexmo.py  test_mixins.py  tests.py  urls.py  views.py  wsgi.py
templates/: 403.html  404.html  500.html  delete_modal_include.haml  email_base.html  formax.haml  formax.html  formax_section.html  frame.haml  frame.html  frame_brands.haml  gear_links_include.haml  modal.haml  modal.html  no_nav.haml  no_nav.html  org_suspended_include.haml  org_suspended_include.html  spa.haml  spa.html  spa_frame.haml  spa_page_header.haml  spa_page_menu.haml  spa_page_menu.html  weni_500.haml
tools/: convert_template.py  squash_migrations.py
webpack/: webpack.config.js
(+5065 files in other folders)
