[tool.poetry]
name = "temba"
version = "8.1.245"
description = "Hosted service for visually building interactive messaging applications"
authors = ["Nyaruka <code@nyaruka.com>"]

[tool.poetry.urls]
repository = "http://github.com/rapidpro/rapidpro"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
django-compressor = "^4.3.1"
django-countries = "^7.0"
django-hamlpy = "^1.7.0"
django-mptt = "^0.12.0"
django-redis = "^4.12.1"
django-storages = "^1.11.1"
django-timezone-field = "^4.1.1"
djangorestframework = "^3.12.2"
dj-database-url = "^0.5.0"
smartmin = "^4.2.2"
celery = "^5.1.0"
redis = "^4.5.4"
elasticsearch = "^7.11.0"
elasticsearch-dsl = "^7.3.0"
boto3 = "^1.28.3"
cryptography = "^41.0.3"
vonage = "2.5.2"
pyfcm = "^1.5.1"
pyotp = "2.4.1"
python-telegram-bot = "^13.14"
twilio = "6.24.0"
twython = "3.5.0"
geojson = "^2.5.0"
Markdown = "^3.3.4"
polib = "^1.1.0"
pyexcel = "^0.7.0"
pyexcel-xls = "^0.7.0"
pyexcel-xlsx = "^0.6.0"
python-magic = "^0.4.22"
xlsxlite = "^0.2.0"
colorama = "^0.4.4"
gunicorn = "^20.0.4"
iptools = "^0.7.0"
iso-639 = "^0.4.5"
iso8601 = "^0.1.14"
phonenumbers = "^8.13.16"
pycountry = "^22.3.5"
python-dateutil = "^2.8.2"
packaging = "^22.0"
requests-toolbelt = "^0.9.1"
chardet = "^4.0.0"
openpyxl = "^3.1.2"
ffmpeg-python = "^0.2.0"
slack-sdk = "3.17.0"
django-formtools = "^2.4.1"
psycopg = "^3.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
isort = "^5.12.0"
responses = "^0.12.1"
ruff = "^0.0.278"
djlint = "^1.31.1"

[tool.poetry_bumpversion.file."temba/__init__.py"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E741", "E501", "F405"]
fix = true

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.djlint]
blank_line_after_tag = "load"
custom_blocks = "render"
custom_html="temba-[a-z-]+"
format_css = true
format_js = true
ignore = "H021,H023"
indent = 2
max_attribute_length = 100
max_line_length = 200

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
templating = "django"

[tool.coverage.run]
source = ["./temba"]

[tool.coverage.report]
ignore_errors = true
precision = 0
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: needs cover",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]
omit = ["**/tests*", "**/tests/*", "*settings*", "**/management/commands/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
