[tool.poetry]
name = "temba"
version = "9.3.16"
description = "Hosted service for visually building interactive messaging applications"
authors = ["Nyaruka <code@nyaruka.com>"]

[tool.poetry.urls]
repository = "http://github.com/rapidpro/rapidpro"

[tool.poetry.dependencies]
python = "~3.11"
Django = "^5.0.8"
django-compressor = "^4.3.1"
django-countries = "^7.0"
django-mptt = "^0.12.0"
django-redis = "^4.12.1"
django-storages = "^1.11.1"
django-timezone-field = "^6.1.0"
djangorestframework = "^3.15.1"
dj-database-url = "^0.5.0"
smartmin = "^5.0.7"
celery = "^5.4.0"
redis = "^5.0.7"
boto3 = "^1.34.137"
cryptography = "^42.0.4"
vonage = "2.5.2"
pyotp = "2.4.1"
twilio = "6.24.0"
twython = "3.5.0"
geojson = "^2.5.0"
Markdown = "^3.3.4"
polib = "^1.1.0"
pyexcel = "^0.7.0"
pyexcel-xls = "^0.7.0"
pyexcel-xlsx = "^0.6.0"
python-magic = "^0.4.22"
xlsxlite = "^0.2.0"
colorama = "^0.4.6"
gunicorn = "^22.0.0"
iptools = "^0.7.0"
iso8601 = "^0.1.14"
phonenumbers = "^8.13.40"
pycountry = "^22.3.5"
python-dateutil = "^2.9.0"
packaging = "^22.0"
requests-toolbelt = "^1.0.0"
chardet = "^4.0.0"
openpyxl = "^3.1.2"
ffmpeg-python = "^0.2.0"
slack-sdk = "3.17.0"
django-formtools = "^2.4.1"
psycopg = "^3.1.9"
pillow = "^10.1.0"
django-imagekit = "^5.0.0"
iso639-lang = "^2.2.3"
google-auth = "^2.30.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = {extras = ["toml"], version = "^7.5.4"}
isort = "^5.13.2"
responses = "^0.25.3"
ruff = "^0.5.0"
djlint = "^1.34.1"

[tool.poetry_bumpversion.file."temba/__init__.py"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E741", "E501", "F405"]

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.djlint]
blank_line_after_tag = "load"
custom_blocks = "render"
custom_html="temba-[a-z-]+"
format_css = true
format_js = true
ignore = "H021,H023"
indent = 2
max_attribute_length = 100
max_line_length = 200

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
templating = "django"

[tool.coverage.run]
source = ["./temba"]

[tool.coverage.report]
ignore_errors = true
precision = 0
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: needs cover",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]
omit = ["**/tests*", "**/tests/*", "*settings*", "**/management/commands/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
